test/fail/listitem-not-in-list.app
//listitem not wrapped in list
application test

define page root() {
  list{
    listitem{"111"}
  }
  listitem{"11"}
}